assets/the4-custom.css
/* ... */
.hdt-main-search .hdt-search-icon:before {
  speak: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  content: "";
  display: block;
  font-family: icomoon !important;
  font-size: 14px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  text-indent: 0;
  text-transform: none;


  z-index: 1;
  margin: auto;
  bottom: 50%;
  top: 50%;
  position: absolute;
  line-height: 0;
}

.hdt-main-search .hdt-search-inner svg {
  display: none;
}

.hdt-main-search .hdt-search-input {
  height: 90px;
  border-radius: unset;
  border: unset;
  border-bottom: 1px solid;
  padding-inline-start: 0;
  padding-inline-end: 0;
  width: 100%;
}

.hdt-main-search .hdt-search-input::placeholder {
  font-size: 16px;
  opacity: .5;
  color: #000;
}

.hdt-main-search-content .hdt-search-head {
  margin-bottom: 30px !important;
}

.hdt-search-empty {
  padding-top: 25px !important;
  padding-bottom: 30px !important;
  gap: 0 !important;
}

@media(max-width: 1149px) {
  .hdt-search-empty {
    padding-top: 0px !important;
    padding-bottom: 0px !important;
    padding-left: 20px;
    padding-right: 20px;
  }
}

.hdt-search-empty svg {
  display: none;
}

.hdt-search-empty .hdt-no-result-product {
  font-size: 23px;
  font-weight: 500;
  letter-spacing: 3px;
  line-height: 1.4;
  text-transform: uppercase;
}

@media(max-width: 1149px) {
  .hdt-search-empty .hdt-no-result-product {
    padding: 0 30px;
  }
}


/* ----- End Search page ------ */

/* ----- Search Drawer ------ */
.hdt-drawer-search .hdt-view_all:hover {
  color: #000000 !important;
}

.hdt-drawer-search .hdt-view_all:hover::after {
  background-color: #000000 !important;
}

/* ----- End Search Drawer ------ */

.sold-out-badge {
  background-image: url(https://cdn.shopify.com/s/files/1/0598/7831/0042/files/CINTA-SOLD-OUT-DORADA.png?v=1695311759);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  display: block !important;
}

.hdt-table-page-cart__heading--product {
  text-align: start !important;
}

.hdt-table-page-cart__heading--total {
  text-align: end;
}

.hdt-table-page-cart__placeholder-header,
.hdt-table-page-cart__row-header {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  white-space: nowrap;
}

hdt-reval-items[reveal-on-scroll=true] .hdt-collection-products>.hdt-collection-item>.hdt-card-product {
  opacity: 1;
}

/* ----- Announcement bar link wrappers ------ */
.hdt-announcement-bar__link,
.hdt-announcement-bar__marquee-item[href] {
  color: inherit;
  text-decoration: none;
}
.hdt-announcement-bar__link:focus-visible,
.hdt-announcement-bar__marquee-item[href]:focus-visible {
  text-decoration: underline;
  text-decoration-thickness: 0.1rem;
  text-underline-offset: 0.15em;
}

.hdt-announcement-bar .hdt-slider .hdt-slider__button {
  min-width: unset !important;
  min-height: unset !important;
  padding: 0 !important;
}

